Updated the game page on the backend so it is up to date with front end, with additions of back end

--- a/upwardmobility/src/GamePageStyle.css
+++ b/upwardmobility/src/GamePageStyle.css
@@ -57,30 +57,44 @@
     left: 0px;
     top: 0px;
 }
-#Inventory {
+
+#GamePageIcon {
     fill: rgba(41,43,47,1);
 }
-.Inventory{
+.GamePageIcon {
     position: absolute;
     overflow: visible;
     background-color: #292B2F;
-    width: 80.981976%;
-    height: 25.966851%;
-    left: 0px;
-    top: 74.033149%;
+    width: 19.018024%;
+    height: 18.563536%;
+    left: 80.981976%;
+    top: 0px;
 }
-#ChatAndLogo {
+#Upward_Mobility_big_Game_Page {
+    filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 1));
+    content: url("./Upward_Mobility_big.png");
+    position: absolute;
+    width: 15.537601%;
+    height: 15.027624%;
+    left: 82.722188%;
+    top: 1.10497238%;
+    overflow: visible;
+}
+
+/*Game List*/
+#GameProgression {
     fill: rgba(47,49,54,1);
 }
-.ChatAndLogo{
+.GameProgression {
     position: absolute;
-    overflow: hidden;
+    overflow: visible;
     background-color: #2F3136;
-    width:19.018024%;
-    height: 81.45%;
-    left: 80.981976%;
-    top: 18.563536%;
+    width: 19.080174%;
+    height: 74.033149%;
+    left: 0px;
+    top: 0px;
 }
+
 #ProgresionImage{
     position: absolute;
     content: url("./StartFinishScale.png");
@@ -92,10 +106,10 @@
 }
 #DiceButton {
     fill: rgba(47,49,54,1);
-    width: 45.634556%;
-    height: 52.237569%;
-    left: 27.114978%;
-    top: 24.734807%;
+    width: 31.634556%;
+    height: 37.237569%;
+    left: 35.114978%;
+    top: 27.734807%;
 }
 .DiceButton {
     filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 1));
@@ -105,17 +119,18 @@
     border-radius: 25px;
     width: 31.634556%;
     height: 37.237569%;
-    left: 30.114978%;
+    left: 35.114978%;
     top: 27.734807%;
     transform: matrix(1,0,0,1,0,0);
+    cursor: pointer;
 }
 #NoPath_-_Copy_8 {
     content: url("./GameDieBigpng.png");
     filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 1));
     position: absolute;
-    width: 33.430702%;
-    height: 40.287293%;
-    left: 32.284649%;
+    width: 23.430702%;
+    height: 28.287293%;
+    left: 39.284649%;
     top: 30.497238%;
     overflow: visible;
 }
@@ -128,10 +143,11 @@
     left: 39.284649%;
     top: 30.497238%;
     overflow: visible;
+    cursor: pointer;
 }
 #A_pair_of_strange_dice_lay_bef {
-    left: 28.903356%;
-    top: 80.883425%;
+    left: 39.903356%;
+    top: 66.883425%;
     position: absolute;
     overflow: visible;
     width: 500px;
@@ -143,7 +159,10 @@
     font-size: 1vw;
     color: rgba(255,255,255,1);
 }
-#Rectangle_46 {
+
+
+/*Player List*/
+#GamePlayerBackground {
     fill: rgba(255,255,255,1);
     stroke: rgba(112,112,112,1);
     stroke-width: 1px;
@@ -152,7 +171,7 @@
     stroke-miterlimit: 4;
     shape-rendering: auto;
 }
-.Rectangle_46 {
+.GamePlayerBackground {
     position: absolute;
     overflow: visible;
     width: 61.901802%;
@@ -170,7 +189,8 @@
     top: 0px;
     overflow: visible;
 }
-#Ellipse_2 {
+
+#GamePlayer_1 {
     fill: rgba(54,57,63,1);
     stroke: rgba(234,0,217,1);
     stroke-width: 5px;
@@ -179,7 +199,7 @@
     stroke-miterlimit: 4;
     shape-rendering: auto;
 }
-.Ellipse_2 {
+.GamePlayer_1 {
     position: absolute;
     overflow: visible;
     width: 6.587943%;
@@ -187,7 +207,7 @@
     left: 24.798011%;
     top: 2.209945%;
 }
-#Ellipse_3 {
+#GamePlayer_2 {
     fill: rgba(54,57,63,1);
     stroke: rgba(115,248,255,1);
     stroke-width: 5px;
@@ -196,7 +216,7 @@
     stroke-miterlimit: 4;
     shape-rendering: auto;
 }
-.Ellipse_3 {
+.GamePlayer_2 {
     position: absolute;
     overflow: visible;
     width: 6.587943%;
@@ -204,7 +224,7 @@
     left: 33.561218%;
     top: 2.209945%;
 }
-#Ellipse_4 {
+#GamePlayer_3 {
     fill: rgba(54,57,63,1);
     stroke: rgba(0,201,60,1);
     stroke-width: 5px;
@@ -213,7 +233,7 @@
     stroke-miterlimit: 4;
     shape-rendering: auto;
 }
-.Ellipse_4 {
+.GamePlayer_3 {
     position: absolute;
     overflow: visible;
     width: 6.587943%;
@@ -221,7 +241,7 @@
     left: 42.324425%;
     top: 2.209945%;
 }
-#Ellipse_5 {
+#GamePlayer_4 {
     fill: rgba(54,57,63,1);
     stroke: rgba(196,0,0,1);
     stroke-width: 5px;
@@ -230,7 +250,7 @@
     stroke-miterlimit: 4;
     shape-rendering: auto;
 }
-.Ellipse_5 {
+.GamePlayer_4 {
     position: absolute;
     overflow: visible;
     width: 6.587943%;
@@ -238,7 +258,7 @@
     left:51.087632%;
     top: 2.209945%;
 }
-#Ellipse_6 {
+#GamePlayer_5 {
     fill: rgba(54,57,63,1);
     stroke: rgba(105,0,225,1);
     stroke-width: 5px;
@@ -247,7 +267,7 @@
     stroke-miterlimit: 4;
     shape-rendering: auto;
 }
-.Ellipse_6 {
+.GamePlayer_5 {
     position: absolute;
     overflow: visible;
     width: 6.587943%;
@@ -255,7 +275,7 @@
     left: 59.850839%;
     top: 2.209945%;
 }
-#Ellipse_7 {
+#GamePlayer_6 {
     fill: rgba(54,57,63,1);
     stroke: rgba(0,61,204,1);
     stroke-width: 5px;
@@ -264,7 +284,7 @@
     stroke-miterlimit: 4;
     shape-rendering: auto;
 }
-.Ellipse_7 {
+.GamePlayer_6 {
     position: absolute;
     overflow: visible;
     width: 6.587943%;
@@ -272,6 +292,22 @@
     left: 68.614046%;
     top: 2.209945%;
 }
+
+
+/*Inventory List*/
+#Inventory {
+    fill: rgba(41,43,47,1);
+}
+.Inventory{
+    position: absolute;
+    overflow: visible;
+    background-color: #292B2F;
+    width: 80.981976%;
+    height: 25.966851%;
+    left: 0px;
+    top: 74.033149%;
+}
+
 #InventoryLabel {
     fill: rgba(32,34,37,1);
 }
@@ -298,6 +334,22 @@
     font-size: 1vw;
     color: rgba(255,255,255,1);
 }
+
+
+/*Chat List*/
+#ChatAndLogo {
+    fill: rgba(47,49,54,1);
+}
+.ChatAndLogo{
+    position: absolute;
+    overflow: visible;
+    background-color: #2F3136;
+    width:19.018024%;
+    height: 100%;
+    left: 80.981976%;
+    top: 18.563536%;
+}
+
 #chatBox {
     fill: rgba(64,68,75,1);
 }
@@ -312,10 +364,12 @@
     left: 81.47918%;
     top: 95.138122%;
 }
-#Rectangle_49 {
+
+
+#GamePageIcon {
     fill: rgba(41,43,47,1);
 }
-.Rectangle_49 {
+.GamePageIcon {
     position: absolute;
     overflow: visible;
     background-color: #292B2F;
@@ -360,6 +414,7 @@
     height: 7.5%;
     width: 25%;
     margin-top: 8%;
+    cursor: pointer;
 }
 
 .tempDiv{
