More display bug fixes

--- a/upwardmobility/src/GamePageStyle.css
+++ b/upwardmobility/src/GamePageStyle.css
@@ -135,12 +135,12 @@
     cursor: pointer;
 }
 #A_pair_of_strange_dice_lay_bef {
-    left: 28.903356%;
+    left: 34.903356%;
     top: 72.883425%;
     position: absolute;
     overflow: visible;
-    width: 500px;
-    height: 116px;
+    width: 31.075202%;
+    height: 12.81768%;
     text-align: center;
     font-family: Common Pixel;
     font-style: normal;
@@ -388,8 +388,8 @@
     top: 73.701657%;
     position: absolute;
     overflow: visible;
-    width: 229px;
-    height: 24px;
+    width: 14.232443%;
+    height: 2.651934%;
     text-align: center;
     font-family: Common Pixel;
     font-style: normal;
@@ -409,7 +409,7 @@
     overflow: visible;
     background-color: #2F3136;
     width:19.018024%;
-    height: 100%;
+    height: 81.4%;
     left: 80.981976%;
     top: 18.563536%;
 }
@@ -449,8 +449,8 @@
     top: 2.883425%;
     position: absolute;
     overflow: visible;
-    width: 500px;
-    height: 116px;
+    width: 300px;
+    height: 25px;
     text-align: left;
     font-family: Common Pixel;
     font-style: normal;
@@ -464,8 +464,8 @@
     top: 6.883425%;
     position: absolute;
     overflow: visible;
-    width: 500px;
-    height: 116px;
+    width: 300px;
+    height: 25px;
     text-align: left;
     font-family: Common Pixel;
     font-style: normal;
@@ -502,8 +502,8 @@
     top: 18.883425%;
     position: absolute;
     overflow: visible;
-    width: 500px;
-    height: 116px;
+    width: 300px;
+    height: 25px;
     text-align: left;
     font-family: Common Pixel;
     font-style: normal;
@@ -516,8 +516,8 @@
     top: 22.883425%;
     position: absolute;
     overflow: visible;
-    width: 500px;
-    height: 116px;
+    width: 300px;
+    height: 25px;
     text-align: left;
     font-family: Common Pixel;
     font-style: normal;
