GamePageStyle.css and Board.js display bug fixes

--- a/upwardmobility/src/GamePageStyle.css
+++ b/upwardmobility/src/GamePageStyle.css
@@ -449,7 +449,7 @@
     top: 2.883425%;
     position: absolute;
     overflow: visible;
-    width: 300px;
+    width: 17.645121%;
     height: 25px;
     text-align: left;
     font-family: Common Pixel;
@@ -464,7 +464,7 @@
     top: 6.883425%;
     position: absolute;
     overflow: visible;
-    width: 300px;
+    width: 17.645121%;
     height: 25px;
     text-align: left;
     font-family: Common Pixel;
@@ -502,7 +502,7 @@
     top: 18.883425%;
     position: absolute;
     overflow: visible;
-    width: 300px;
+    width: 17.645121%;
     height: 25px;
     text-align: left;
     font-family: Common Pixel;
@@ -516,7 +516,7 @@
     top: 22.883425%;
     position: absolute;
     overflow: visible;
-    width: 300px;
+    width: 17.645121%;
     height: 25px;
     text-align: left;
     font-family: Common Pixel;
