--- a/upwardmobility/src/GamePageStyle.css
+++ b/upwardmobility/src/GamePageStyle.css
@@ -829,3 +829,22 @@
     overflow: visible;
 }
 
+.inventory-item-container {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    position: absolute;
+    top: 10%;
+    width: 100%;
+    height: 100%
+}
+.InventoryImage{
+    /*content: url(G);*/
+    filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 1));
+    position: absolute;
+    width: 13.430702%;
+    height: 60.287293%;
+    left: 39.284649%;
+    top: 15.497238%;
+    overflow: visible;
+}
