--- a/upwardmobility/src/GamePageStyle.css
+++ b/upwardmobility/src/GamePageStyle.css
@@ -337,13 +337,17 @@
 }
 
 #GamePlayer_1 {
-    fill: rgba(54,57,63,1);
-    stroke: rgba(234,0,217,1);
+    display: block;
+    background-color: rgba(54,57,63,1);
+    border: 5px solid rgba(234,0,217,1);
+    border-radius: 60%;
     stroke-width: 5px;
     stroke-linejoin: miter;
     stroke-linecap: butt;
     stroke-miterlimit: 4;
     shape-rendering: auto;
+    width: 100%;
+    height: 100%;
 }
 .GamePlayer_1 {
     position: absolute;
@@ -351,16 +355,20 @@
     width: 6.587943%;
     height: 11.712707%;
     left: 24.798011%;
-    top: 2.209945%;
 }
 #GamePlayer_2 {
+    display: block;
     fill: rgba(54,57,63,1);
-    stroke: rgba(115,248,255,1);
+    background-color: rgba(54,57,63,1);
+    border: 5px solid rgba(115,248,255,1);
+    border-radius: 60%;
     stroke-width: 5px;
     stroke-linejoin: miter;
     stroke-linecap: butt;
     stroke-miterlimit: 4;
     shape-rendering: auto;
+    width: 100%;
+    height: 100%;
 }
 .GamePlayer_2 {
     position: absolute;
@@ -368,16 +376,20 @@
     width: 6.587943%;
     height: 11.712707%;
     left: 33.561218%;
-    top: 2.209945%;
+
 }
 #GamePlayer_3 {
-    fill: rgba(54,57,63,1);
-    stroke: rgba(0,201,60,1);
+    display: block;
+    background-color: rgba(54,57,63,1);
+    border: 5px solid rgba(0,201,60,1);
+    border-radius: 60%;
     stroke-width: 5px;
     stroke-linejoin: miter;
     stroke-linecap: butt;
     stroke-miterlimit: 4;
     shape-rendering: auto;
+    width: 100%;
+    height: 100%;
 }
 .GamePlayer_3 {
     position: absolute;
@@ -385,16 +397,19 @@
     width: 6.587943%;
     height: 11.712707%;
     left: 42.324425%;
-    top: 2.209945%;
 }
 #GamePlayer_4 {
-    fill: rgba(54,57,63,1);
-    stroke: rgba(196,0,0,1);
+    display: block;
+    background-color: rgba(54,57,63,1);
+    border: 5px solid rgba(196,0,0,1);
+    border-radius: 60%;
     stroke-width: 5px;
     stroke-linejoin: miter;
     stroke-linecap: butt;
     stroke-miterlimit: 4;
     shape-rendering: auto;
+    width: 100%;
+    height: 100%;
 }
 .GamePlayer_4 {
     position: absolute;
@@ -402,16 +417,19 @@
     width: 6.587943%;
     height: 11.712707%;
     left:51.087632%;
-    top: 2.209945%;
 }
 #GamePlayer_5 {
-    fill: rgba(54,57,63,1);
-    stroke: rgba(105,0,225,1);
+    display: block;
+    background-color: rgba(54,57,63,1);
+    border: 5px solid rgba(105,0,225,1);
+    border-radius: 60%;
     stroke-width: 5px;
     stroke-linejoin: miter;
     stroke-linecap: butt;
     stroke-miterlimit: 4;
     shape-rendering: auto;
+    width: 100%;
+    height: 100%;
 }
 .GamePlayer_5 {
     position: absolute;
@@ -419,16 +437,19 @@
     width: 6.587943%;
     height: 11.712707%;
     left: 59.850839%;
-    top: 2.209945%;
 }
 #GamePlayer_6 {
-    fill: rgba(54,57,63,1);
-    stroke: rgba(0,61,204,1);
+    display: block;
+    background-color: rgba(54,57,63,1);
+    border: 5px solid rgba(0,61,204,1);
+    border-radius: 60%;
     stroke-width: 5px;
     stroke-linejoin: miter;
     stroke-linecap: butt;
     stroke-miterlimit: 4;
     shape-rendering: auto;
+    width: 100%;
+    height: 100%;
 }
 .GamePlayer_6 {
     position: absolute;
@@ -436,7 +457,6 @@
     width: 6.587943%;
     height: 11.712707%;
     left: 68.614046%;
-    top: 2.209945%;
 }
 /*Player List*/
 
@@ -827,5 +847,24 @@
     left: 39.284649%;
     top: 34.497238%;
     overflow: visible;
+}
+
+
+.playerJobTitleDis{
+    display: block;
+    margin-top: 5px;
+    -webkit-text-fill-color: white;
+    font-size: .5vw;
+    font-family: "Common Pixel";
+    text-align: center;
+}
+
+.playerNameDis{
+    display: block;
+    margin-bottom: 5px;
+    -webkit-text-fill-color: white;
+    font-size: .5vw;
+    font-family: "Common Pixel";
+    text-align: center;
 }
 
