--- a/upwardmobility/src/GamePageStyle.css
+++ b/upwardmobility/src/GamePageStyle.css
@@ -893,3 +893,18 @@
     -webkit-text-fill-color: white;
     font-size: 1vw;
 }
+
+.showItemDescription{
+    position: absolute;
+    width: 25%;
+    height: 100%;
+    background-color: #292B2F;
+    top: 15%;
+    left: 1%
+}
+
+.inventoryItemDescriptionText{
+    font-family: "Common Pixel";
+    -webkit-text-fill-color: white;
+    font-size: 1vw;
+}
