--- a/upwardmobility/src/GamePageStyle.css
+++ b/upwardmobility/src/GamePageStyle.css
@@ -88,9 +88,9 @@
 #ProgresionImage{
     position: absolute;
     content: url("./StartFinishScale.png");
-    width: 14.916097%;
-    height: 70.718232%;
-    left: 7px;
+    width: 100%;
+    height: 96%;
+    left: 5px;
     top: 15px;
     overflow: visible;
 }
@@ -136,6 +136,7 @@
     cursor: pointer;
 }
 #A_pair_of_strange_dice_lay_bef {
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     left: 34.903356%;
     top: 72.883425%;
     position: absolute;
@@ -151,6 +152,7 @@
 }
 
 .inGameText {
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     position: absolute;
     overflow: visible;
     width: 1000px;
@@ -166,6 +168,7 @@
 }
 
 .winningGameText {
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     position: absolute;
     overflow: visible;
     width: 750px;
@@ -209,6 +212,8 @@
 }
 
 .inGameButton{
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     position: absolute;
     border: solid white 3px;
     -webkit-text-fill-color: white;
@@ -251,6 +256,8 @@
 }
 
 .eventButton{
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     position: absolute;
     border: solid white 3px;
     -webkit-text-fill-color: white;
@@ -264,6 +271,8 @@
 }
 
 .answerButton {
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     /*position: absolute;*/
     border: solid white 3px;
     -webkit-text-fill-color: white;
@@ -319,7 +328,7 @@
     overflow: hidden;
     content: url("./PlayerListBackground.png");
     width: 61.901802%;
-    height: 16.132597%;
+    height: 17.132597%;
     left: 19.080174%;
     top: 0px;
     overflow: visible;
@@ -486,6 +495,7 @@
     top: 74.033149%;
 }
 #Inventory_Label_Word {
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     left: -4px;
     top: 73.701657%;
     position: absolute;
@@ -547,6 +557,7 @@
 }
 
 #PlayerName {
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     top: 2.883425%;
     position: absolute;
     overflow: visible;
@@ -561,6 +572,7 @@
 }
 
 #PlayerJobTitle {
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     top: 16.883425%;
     position: absolute;
     overflow: visible;
@@ -596,6 +608,7 @@
 }
 
 #PlayerCurrency {
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     top: 68.883425%;
     position: absolute;
     overflow: visible;
@@ -624,6 +637,7 @@
 
 
 #GameEndTurn{
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     visibility: hidden;
     border: solid white 3px;
     -webkit-text-fill-color: white;
@@ -668,6 +682,8 @@
 }
 
 .eventBtnContainer {
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -701,6 +717,7 @@
 }
 
 #use-item-button {
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     position: absolute;
     border: solid white 3px;
     -webkit-text-fill-color: white;
@@ -718,6 +735,8 @@
 }
 
 #use-item-button-fromscreen {
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     position: absolute;
     border: solid white 3px;
     -webkit-text-fill-color: white;
@@ -735,6 +754,8 @@
 }
 
 #cancel-item-button {
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     position: absolute;
     border: solid white 3px;
     -webkit-text-fill-color: white;
@@ -752,16 +773,22 @@
 }
 
 #cancel-item-button:hover {
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     background-color: #2F3136;
     border: #61dafb 3px solid;
 }
 
 #use-item-button:hover {
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     background-color: #2F3136;
     border: #61dafb 3px solid;
 }
 
 #showEventButton{
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     position: absolute;
     border: solid white 3px;
     -webkit-text-fill-color: white;
@@ -780,6 +807,8 @@
 }
 
 #showEventButton:hover {
+    box-shadow: 10px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
     background-color: #2F3136;
     border: #61dafb 3px solid;
 }
@@ -864,6 +893,7 @@
 }
 
 .playerJobTitleDis{
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     display: block;
     -webkit-text-fill-color: white;
     font-size: .5vw;
@@ -873,6 +903,7 @@
 }
 
 .playerNameDis{
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     margin-top: 10px;
     display: block;
     -webkit-text-fill-color: white;
@@ -889,6 +920,7 @@
 }
 
 .playerBuffText{
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     font-family: "Common Pixel";
     -webkit-text-fill-color: white;
     font-size: 1vw;
@@ -904,6 +936,7 @@
 }
 
 .inventoryItemDescriptionText{
+    text-shadow: 4px 6px 6px rgba(0,0,0,1);
     font-family: "Common Pixel";
     -webkit-text-fill-color: white;
     font-size: 1vw;
